[package]
name = "fdb-viewer"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"

[dependencies]
memmap = "0.7"
assembly-data = { version = "0.1.2", path = "../assembly/modules/data" }

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]

